[package]
name = "wavv"
version = "0.2.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "no_std library for parsing and creating wav files"
repository = "https://github.com/samuelleeuwenburg/wavv"
documentation = "https://docs.rs/wavv"
license = "Apache-2.0"
keywords = ["audio", "wav", "no_std"]

[features]
default = ["embedded"]
embedded = ["embedded-io"]

[dependencies]
embedded-io = { version = "0.6", optional = true }

[dev-dependencies]
embedded-io = { version = "0.6", features = ["std"] }
