[package]
name = "wavv"
version = "0.2.0"
authors = ["Samuel Leeuwenburg <samleeuwenburg@gmail.com>"]
edition = "2018"
description = "no_std library for parsing and creating wav files"
repository = "https://github.com/samuelleeuwenburg/wavv"
documentation = "https://docs.rs/wavv"
license = "Apache-2.0"
keywords = ["audio", "wav", "no_std"]

[features]
default = []
std = ["io", "embedded-io/std", "embedded-io-async/std", "tokio"]
io = ["embedded-io", "embedded-io-async"]

[dependencies]
embedded-io = { version = "0.6", optional = true }
embedded-io-async = { version = "0.6", optional = true }
tokio = { version = "1", default_features = false, features = [
    "fs",
    "io-util",
], optional = true }

[dev-dependencies]
embedded-io = { version = "0.6", features = ["std"] }
embedded-io-async = { version = "0.6", features = ["std"] }
tokio = { version = "1", features = ["full"] }
